--- a/public_html/index.html
+++ b/public_html/index.html
@@ -21,11 +21,11 @@
 </div>
 <script src="zeta/namespace.js"></script>
 <script src="zeta/registration/UserProperty.js"></script>
-<script src="zeta/main/debug.js"></script>
-<!--<script src="zeta/registration/User.js"></script>-->
+<script src="zeta/registration/User.js"></script>
 <!--<script src="zeta/registration/RequestHandler.js"></script>-->
 <!--<script src="zeta/registration/Registration.js"></script>-->
 <!--<script src="zeta/main/app.js"></script>-->
 <!--<script src="http://cdnjs.cloudflare.com/ajax/libs/coffee-script/1.6.3/coffee-script.min.js"></script>-->
+<script src="zeta/main/debug.js"></script>
 </body>
 </html>
