--- a/public_html/index.html
+++ b/public_html/index.html
@@ -22,7 +22,7 @@
 <script src="zeta/namespace.js"></script>
 <script src="zeta/registration/UserProperty.js"></script>
 <script src="zeta/registration/User.js"></script>
-<!--<script src="zeta/registration/RequestHandler.js"></script>-->
+<script src="zeta/registration/RequestHandler.js"></script>
 <!--<script src="zeta/registration/Registration.js"></script>-->
 <!--<script src="zeta/main/app.js"></script>-->
 <!--<script src="http://cdnjs.cloudflare.com/ajax/libs/coffee-script/1.6.3/coffee-script.min.js"></script>-->
