--- a/public_html/index.html
+++ b/public_html/index.html
@@ -1,31 +1,32 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>TODO supply a title</title>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width">
-  <link rel="stylesheet" href="css/registration.css"/>
-  <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
-</head>
-<body>
-<div id="registration-form">
-  <form>
-    <p>
-      <input
-              id="registration-form-name"
-              type="text"
-              placeholder="Your name"
-              />
-    </p>
-  </form>
-</div>
-<script src="zeta/namespace.js"></script>
-<script src="zeta/registration/UserProperty.js"></script>
-<script src="zeta/registration/User.js"></script>
-<script src="zeta/registration/RequestHandler.js"></script>
-<script src="zeta/registration/Registration.js"></script>
-<script src="zeta/main/app.js"></script>
-<!--<script src="http://cdnjs.cloudflare.com/ajax/libs/coffee-script/1.6.3/coffee-script.min.js"></script>-->
-<!--<script src="zeta/main/debug.js"></script>-->
-</body>
+  <head>
+    <title>TODO supply a title</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width">
+    <link rel="stylesheet" href="css/registration.css"/>
+    <script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
+    <!--<script src="http://code.jquery.com/jquery-2.0.3.min.map"></script>-->
+  </head>
+  <body>
+    <div id="registration-form">
+      <form>
+        <p>
+          <input
+            id="registration-form-name"
+            type="text"
+            placeholder="Your name"
+            />
+        </p>
+      </form>
+    </div>
+    <script src="zeta/namespace.js"></script>
+    <script src="zeta/registration/UserProperty.js"></script>
+    <script src="zeta/registration/User.js"></script>
+    <script src="zeta/registration/RequestHandler.js"></script>
+    <script src="zeta/registration/Registration.js"></script>
+    <script src="zeta/main/app.js"></script>
+    <!--<script src="http://cdnjs.cloudflare.com/ajax/libs/coffee-script/1.6.3/coffee-script.min.js"></script>-->
+    <!--<script src="zeta/main/debug.js"></script>-->
+  </body>
 </html>
