Implemented username validation with fixed strings

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -16,9 +16,7 @@
           type="text"
           placeholder="Your name"
           />
-        <div class="guidance">
-          Text
-        </div>
+        <div class="guidance"></div>
       </form>
     </div>
     <script src="zeta/namespace.js"></script>
