Looking after the @

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -11,12 +11,22 @@
   <body onload="document.getElementById('registration-form-name').focus();">
     <div id="registration-form">
       <form>
-        <input
-          id="registration-form-name"
-          type="text"
-          placeholder="Your name"
-          />
-        <div class="guidance"></div>
+        <div class="registration-form-property">
+          <input
+            id="registration-form-name"
+            type="text"
+            placeholder="Your name"
+            />
+          <div class="guidance"></div>
+        </div>
+        <div class="registration-form-property">
+          <input
+            id="registration-form-email"
+            type="text"
+            placeholder="Email"
+            />
+          <div class="guidance"></div>
+        </div>
       </form>
     </div>
     <script src="zeta/namespace.js"></script>
