one guidance at a time

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -11,6 +11,7 @@
   <body onload="document.getElementById('registration-form-name').focus();">
     <div id="registration-form">
       <form>
+        <!-- Username -->
         <div class="registration-form-property">
           <input
             id="registration-form-name"
@@ -19,11 +20,23 @@
             />
           <div class="guidance"></div>
         </div>
+
+        <!-- Email -->
         <div class="registration-form-property">
           <input
             id="registration-form-email"
             type="text"
             placeholder="Email"
+            />
+          <div class="guidance"></div>
+        </div>
+
+        <!-- Password -->
+        <div class="registration-form-property">
+          <input
+            id="registration-form-password"
+            type="password"
+            placeholder="Password"
             />
           <div class="guidance"></div>
         </div>
