Guidance system is working

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -41,7 +41,7 @@
         </div>
 
         <!-- Password -->
-        <div id="property-user-email" class="registration-form-property">
+        <div id="property-user-password" class="registration-form-property">
           <div class="input-container">
             <input
               id="registration-form-password"
