Registration button is only active if pre-check has been passed!

--- a/public_html/slideshow.html
+++ b/public_html/slideshow.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <!--
+    Readme: http://sixrevisions.com/tutorials/javascript_tutorial/create-a-slick-and-accessible-slideshow-using-jquery/
+    TOOD: Implement swip gesture for slideshow: http://eightmedia.github.io/hammer.js/ 
+    -->
     <title>TODO supply a title</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
