--- a/public_html/index.html
+++ b/public_html/index.html
@@ -4,6 +4,7 @@
     <title>TODO supply a title</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
+    <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.3.0/pure-min.css" />
     <link rel="stylesheet" href="css/registration.css"/>
     <script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
     <!--<script src="http://code.jquery.com/jquery-2.0.3.min.map"></script>-->
@@ -53,6 +54,8 @@
           </div>
           <div class="guidance-message"></div>
         </div>
+
+        <button class="pure-button pure-button-disabled">Create User</button>
 
       </form>
     </div>
