--- a/public_html/index.html
+++ b/public_html/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div id="registration-form-container">
-      <form id="registration-form">
+      <form id="registration-form" autocomplete="off">
 
         <!-- Username -->
         <div id="property-user-name" class="registration-form-property">
