--- a/public_html/index.html
+++ b/public_html/index.html
@@ -63,6 +63,7 @@
     <script src="zeta/registration/UserProperty.js"></script>
     <script src="zeta/registration/User.js"></script>
     <script src="zeta/registration/RequestHandler.js"></script>
+    <script src="zeta/registration/user_management.js"></script>
     <script src="zeta/registration/UserBuilder.js"></script>
     <script src="zeta/main/app.js"></script>
     <!--<script src="http://cdnjs.cloudflare.com/ajax/libs/coffee-script/1.6.3/coffee-script.min.js"></script>-->
