Implemented E164 phone number conversion.

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -59,12 +59,14 @@
 
       </form>
     </div>
+    <script src="js/libs/PhoneFormat.js"></script>
     <script src="zeta/namespace.js"></script>
-    <script src="zeta/registration/UserProperty.js"></script>
-    <script src="zeta/registration/User.js"></script>
-    <script src="zeta/registration/RequestHandler.js"></script>
+    <script src="zeta/registration/utils.js"></script>
+    <script src="zeta/registration/user_properties.js"></script>
+    <script src="zeta/registration/user.js"></script>
+    <script src="zeta/registration/request_handler.js"></script>
     <script src="zeta/registration/user_management.js"></script>
-    <script src="zeta/registration/UserBuilder.js"></script>
+    <script src="zeta/registration/user_builder.js"></script>
     <script src="zeta/main/app.js"></script>
     <!--<script src="http://cdnjs.cloudflare.com/ajax/libs/coffee-script/1.6.3/coffee-script.min.js"></script>-->
     <!--<script src="zeta/main/debug.js"></script>-->
