Implemented conversation fetching.

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -61,6 +61,7 @@
     </div>
     <script src="js/libs/PhoneFormat.js"></script>
     <script src="zeta/namespace.js"></script>
+    <script src="zeta/conversations/conversation.js"></script>
     <script src="zeta/registration/utils.js"></script>
     <script src="zeta/registration/user_properties.js"></script>
     <script src="zeta/registration/user.js"></script>
