--- a/public_html/index.html
+++ b/public_html/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.3.0/pure-min.css" />
     <link rel="stylesheet" href="css/registration.css"/>
     <script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
+    <script src="js/libs/uuid.js"></script>
     <!--<script src="http://code.jquery.com/jquery-2.0.3.min.map"></script>-->
   </head>
   <body>
