User service implementation

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -6,9 +6,24 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
-    
-    <script src="zeta/app/session.js"></script>
-    
+    <!-- External -->
+    <script src="js/libs/jquery-2.0.3.min.js"></script>
+    <script src="js/libs/PhoneFormat.js"></script>
+    <script src="js/libs/uuid.js"></script>
+    <!-- Zeta.Utils -->
+    <script src="zeta/utils/misc.js"></script>
+    <script src="zeta/utils/namespace.js"></script>
+    <script src="zeta/utils/request_handler.js"></script>
+    <!-- Zeta.Model -->
+    <script src="zeta/model/login.js"></script>
+    <!-- Zeta.Storage -->
+    <script src="zeta/storage/session.js"></script>
+    <!-- Zeta.Service -->
+    <script src="zeta/service/urls.js"></script>
+    <script src="zeta/service/user_service.js"></script>
+    <script src="zeta/service/main.js"></script>
+    <!-- Main -->
+    <script src="zeta/test/main.js"></script>
   </head>
   <body>
     Zeta!!
