--- a/public_html/index.html
+++ b/public_html/index.html
@@ -16,6 +16,8 @@
     <script src="zeta/utils/request_handler.js"></script>
     <!-- Zeta.Model -->
     <script src="zeta/model/login.js"></script>
+    <script src="zeta/model/user_properties.js"></script>
+    <script src="zeta/model/user.js"></script>
     <!-- Zeta.Storage -->
     <script src="zeta/storage/session.js"></script>
     <!-- Zeta.Service -->
