Implemented a conversation service.

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Zeta web-app</title>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
@@ -18,11 +18,13 @@
     <script src="zeta/model/login.js"></script>
     <script src="zeta/model/user_properties.js"></script>
     <script src="zeta/model/user.js"></script>
+    <script src="zeta/model/conversation.js"></script>
     <!-- Zeta.Storage -->
     <script src="zeta/storage/session.js"></script>
     <!-- Zeta.Service -->
     <script src="zeta/service/urls.js"></script>
     <script src="zeta/service/user_service.js"></script>
+    <script src="zeta/service/conversation_service.js"></script>
     <script src="zeta/service/main.js"></script>
     <!-- Main -->
     <script src="zeta/test/main.js"></script>
