Implemented proper callback timing for "get_names_for_all_conversations".

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -30,6 +30,7 @@
     <script src="zeta/test/main.js"></script>
   </head>
   <body>
-    Zeta!!
+    <ul id="my-conversations">
+    </ul>
   </body>
 </html>
