--- a/public_html/index.html
+++ b/public_html/index.html
@@ -10,6 +10,7 @@
     <script src="js/libs/jquery-2.0.3.min.js"></script>
     <script src="js/libs/PhoneFormat.js"></script>
     <script src="js/libs/uuid.js"></script>
+    <script src="js/libs/sha256.js"></script>
     <!-- Zeta.Utils -->
     <script src="zeta/utils/misc.js"></script>
     <script src="zeta/utils/namespace.js"></script>
