--- a/public_html/index.html
+++ b/public_html/index.html
@@ -6,6 +6,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
+    <link rel="stylesheet" href="zeta/view/registration/background_switcher.css" />
     <!-- External -->
     <script src="js/libs/jquery-2.0.3.min.js"></script>
     <script src="js/libs/PhoneFormat.js"></script>
@@ -28,7 +29,7 @@
     <script src="zeta/service/conversation_service.js"></script>
     <script src="zeta/service/main.js"></script>
     <!-- Main -->
-    <script src="zeta/test/main.js"></script>
+    <!--<script src="zeta/test/main.js"></script>-->
     <!-- View -->
     <script src="zeta/view/registration/background_switcher.js"></script>
   </head>
