--- a/public_html/faces.html
+++ b/public_html/faces.html
@@ -58,14 +58,7 @@
       }
 
       .fade-out {
-        -webkit-animation-name: fade-out;
-        -webkit-animation-duration: 2.5s;
-        -webkit-animation-timing-function: linear;
-        -webkit-animation-delay: 6s;
-        -webkit-animation-iteration-count: 1;
-        -webkit-animation-direction: alternate;
-        -webkit-animation-play-state: running;
-        -webkit-animation-fill-mode: forwards;
+        -webkit-animation: fade-out 2.5s linear 6s 1 alternate forwards paused;
       }
     </style>
   </head>
