Added an utility for cross-browser shorthands.

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -15,6 +15,7 @@
     <!-- Zeta.Utils -->
     <script src="zeta/utils/misc.js"></script>
     <script src="zeta/utils/namespace.js"></script>
+    <script src="zeta/utils/shorthand.js"></script>
     <script src="zeta/utils/request_handler.js"></script>
     <!-- Zeta.Model -->
     <script src="zeta/model/login.js"></script>
