--- a/public_html/index.html
+++ b/public_html/index.html
@@ -79,8 +79,8 @@
             <div id="bottom-unit-1" class="pure-u-1">
 
               <!-- Conversations -->
-              <div id="news-grid" class="pure-g-r">
-                <div id="news-unit-1" class="pure-u-1-3">
+              <div id="conversation-list-grid" class="pure-g-r">
+                <div id="conversation-list-unit-1" class="pure-u-1-3">
                   <!-- Menu -->
                   <div class="pure-menu pure-menu-open">
                     <a class="pure-menu-heading">Your conversations</a>
@@ -91,8 +91,8 @@
 
                   </div>
                 </div>
-                <div id="news-unit-2" class="pure-u-2-3">
-                  &nbsp;
+                <div id="conversation-list-unit-2" class="pure-u-2-3">
+                  <p data-bind="text: conversation_intro"></p>
                 </div>
               </div>
 
