--- a/public_html/index.html
+++ b/public_html/index.html
@@ -42,9 +42,9 @@
     <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.3.0/pure-min.css" />
     <style>
       * { 
-        margin: 0; 
-        padding: 0; 
-        border: 0; 
+        /*        margin: 0; 
+                padding: 0; 
+                border: 0; */
       }
 
       html, 
@@ -61,6 +61,18 @@
         /* Takes the full dimension of the viewport */ 
         width: 100%;
         height: 100%;
+      }
+
+      #conversation-input-text {
+        margin: 5px;
+      }
+      
+      .pure-button {
+        color: white;
+      }
+
+      .pure-button-error {
+        background: rgb(202, 60, 60); /* this is a maroon */
       }
     </style>
   </head>
@@ -86,13 +98,34 @@
                     <a class="pure-menu-heading">Your conversations</a>
 
                     <ul id="conversation-list" data-bind="foreach: conversations">
-                      <li><a href="#" data-bind="text: name"></a></li>
+                      <li><a href="#" data-bind="text: name, click: $parent.open_conversation"></a></li>
                     </ul>
 
                   </div>
                 </div>
                 <div id="conversation-list-unit-2" class="pure-u-2-3">
-                  <p data-bind="text: conversation_intro"></p>
+                  <div class="conversation-header">
+                    <p data-bind="html: conversation_intro"></p>
+                  </div>
+                  <div data-bind="foreach: conversation_messages">
+                    <p data-bind="html: $data"></p>
+                  </div>
+                  <div id="conversation-controls" class="pure-control-group">
+                    <form class="pure-form" autocomplete="off">
+                      <input id="conversation-input-text" type="text" placeholder="Start typing..."
+                             data-bind="value: conversation_input_text"
+                             />
+                      <button class="pure-button pure-button-primary"
+                              data-bind="click: send_message_to_conversation"
+                              >Send</button>
+                      <button class="pure-button pure-button-error"
+                              data-bind="click: send_knock"
+                              >Knock</button>
+                      <button class="pure-button pure-button-error"
+                              data-bind="click: send_hot_knock"
+                              >Hot Knock</button>
+                    </form>
+                  </div>
                 </div>
               </div>
 
