--- a/public_html/index.html
+++ b/public_html/index.html
@@ -41,12 +41,6 @@
     <!-- CSS Frameworks -->
     <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.3.0/pure-min.css" />
     <style>
-      * { 
-        /*        margin: 0; 
-                padding: 0; 
-                border: 0; */
-      }
-
       html, 
       body { 
         width: 100%; 
@@ -72,7 +66,8 @@
       }
 
       .pure-button-error {
-        background: rgb(202, 60, 60); /* this is a maroon */
+        /*maroon*/
+        background: rgb(202, 60, 60);
       }
     </style>
   </head>
