Implemented "Zeta.Service.WebSocket.open_websocket()".

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -32,6 +32,7 @@
     <script src="zeta/service/urls.js"></script>
     <script src="zeta/service/user_service.js"></script>
     <script src="zeta/service/conversation_service.js"></script>
+    <script src="zeta/service/websocket.js"></script>
     <script src="zeta/service/main.js"></script>
     <!-- View -->
     <script src="zeta/view/registration/background_switcher.js"></script>
