Implemented publish/subscriber mechanism!

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -39,6 +39,8 @@
     <script src="zeta/view/registration/background_switcher.js"></script>
     <!-- View models -->
     <script src="zeta/view_model/main_view_model.js"></script>
+    <!-- Controller -->
+    <script src="zeta/controller/conversation_controller.js"></script>
     <!-- Main -->
     <script src="zeta/main/instances.js"></script>
     <script src="zeta/main/demo.js"></script>
