--- a/public_html/index.html
+++ b/public_html/index.html
@@ -6,7 +6,6 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
-    <link rel="stylesheet" href="zeta/view/registration/background_switcher.css" />
     <!-- External base -->
     <script src="js/libs/jquery/2.1.0/jquery-2.1.0.min.js"></script>
     <script src="js/libs/amplify/1.1.2/amplify.core.min.js"></script>
@@ -39,6 +38,7 @@
     <script src="zeta/view/registration/background_switcher.js"></script>
     <!-- View models -->
     <script src="zeta/view_model/main_view_model.js"></script>
+    <script src="zeta/view_model/conversation_list.js"></script>
     <!-- Controller -->
     <script src="zeta/controller/conversation_controller.js"></script>
     <!-- Main -->
@@ -46,6 +46,9 @@
     <script src="zeta/main/demo.js"></script>
     <!-- CSS Frameworks -->
     <link rel="stylesheet" href="css/libs/pure/3.0.0/pure-min.css" />
+    <link rel="stylesheet" href="css/libs/animate.css/3.0.0/animate.min.css" />
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="zeta/view/registration/background_switcher.css" />
     <style>
       html, 
       body { 
@@ -103,7 +106,7 @@
                     <a class="pure-menu-heading">Your conversations</a>
 
                     <ul id="conversation-list" data-bind="foreach: conversations">
-                      <li><a href="#" data-bind="text: name, click: $parent.open_conversation"></a></li>
+                      <li><a href="#" data-bind="attr: { id: dom_selector }, text: name, click: $parent.open_conversation"></a></li>
                     </ul>
 
                   </div>
