--- a/public_html/index.html
+++ b/public_html/index.html
@@ -11,6 +11,7 @@
     <script src="js/libs/amplify/1.1.2/amplify.core.min.js"></script>
     <script src="js/libs/knockout-3.0.0.js"></script>
     <!-- External helpers -->
+    <script src="js/libs/cryptojs/3.1.2/md5.js"></script>
     <script src="js/libs/misc/PhoneFormat.js"></script>
     <script src="js/libs/misc/uuid.js"></script>
     <script src="js/libs/misc/sha256.js"></script>
@@ -32,6 +33,7 @@
     <script src="zeta/service/urls.js"></script>
     <script src="zeta/service/user_service.js"></script>
     <script src="zeta/service/conversation_service.js"></script>
+    <script src="zeta/service/asset_service.js"></script>
     <script src="zeta/service/websocket.js"></script>
     <script src="zeta/service/main.js"></script>
     <!-- View -->
@@ -85,6 +87,16 @@
 
       #conversation-list-menu {
         overflow: hidden;
+      }
+
+      #holder { 
+        border: 10px dashed #ccc; 
+        width: 300px; 
+        height: 300px; 
+      }
+
+      #holder.hover { 
+        border: 10px dashed #333; 
       }
     </style>
   </head>
@@ -145,6 +157,10 @@
                                 data-bind="click: send_hot_knock"
                                 >Hot Knock</button>
                       </div>
+
+                      <div class="pure-control-group">
+                        <div id="holder"></div>
+                      </div>
                     </form>
                   </div>
                 </div>
@@ -158,6 +174,42 @@
     </div> <!-- /website-content -->
     <script>
       $(window).load(function() {
+        /* Drag'n'Drop */
+        var holder = document.getElementById('holder');
+
+        holder.ondragover = function() {
+          this.className = 'hover';
+          return false;
+        };
+
+        holder.ondragend = function() {
+          this.className = '';
+          return false;
+        };
+
+        /**
+         * http://blog.teamtreehouse.com/reading-files-using-the-html5-filereader-api
+         * http://html5demos.com/file-api
+         * 
+         * @param {type} e
+         * @returns {undefined}
+         */
+        holder.ondrop = function(e) {
+          e.preventDefault();
+          var file = e.dataTransfer.files[0];
+          var reader = new FileReader();
+          reader.onload = function(event) {
+            var length = event.total;
+            var binary = event.target.result;
+            var md5 = Zeta.Utils.Misc.encode_base64(Zeta.Utils.Misc.encode_md5((binary)));
+            console.log(md5);
+            console.log(length);
+            Zeta.Service.AssetService.test(length, md5, binary);
+          };
+          console.log(file);
+          reader.readAsBinaryString(file);
+        };
+
         var config = {
           images: [
             'images/welcome_screen_photos/test_bg_01.jpg',
