Renamed upload service method.

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -225,7 +225,7 @@
                 var callback = function(data, textStatus, jqXHR) {
                   console.log(JSON.stringify(data));
                 };
-                Zeta.Service.AssetService.upload_image_jpeg(values, callback);
+                Zeta.Service.AssetService.upload_asset(values, callback);
               };
             };
             dataURLReader.readAsDataURL(file);
