Removed global functions.

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -174,21 +174,6 @@
 
     </div> <!-- /website-content -->
     <script>
-      window.binary = '';
-      window.hash = '';
-      window.contentType = '';
-
-      function _arrayBufferToBase64(buffer) {
-        window.binary = '';
-        var bytes = new Uint8Array(buffer);
-        var len = bytes.byteLength;
-        for (var i = 0; i < len; i++) {
-          window.binary += String.fromCharCode(bytes[i]);
-        }
-
-        window.hash = Zeta.Utils.Misc.encode_base64_md5(window.binary);
-      }
-
       $(window).load(function() {
         /* Drag'n'Drop */
         var holder = document.getElementById('holder');
@@ -217,7 +202,6 @@
           // Read binary data
           reader.onload = function(event) {
             var data = event.target.result;
-            var data16 = new Uint16Array(data);
 
             // Read URL string to parse image properties
             var dataURLReader = new FileReader();
@@ -225,20 +209,18 @@
               // Parse image properties
               var dataURL = event.target.result;
               var contentType = dataURL.split(",")[0].split(":")[1].split(";")[0];
-              _arrayBufferToBase64(data);
-              
-//              alert(window.binary);
-//              alert(window.hash);
+              var binaryString = Zeta.Utils.Misc.get_binary_string_from_array_buffer(data);
+              var hash = Zeta.Utils.Misc.encode_base64_md5(binaryString);
 
               var image = new Image();
               image.src = dataURL;
               image.onload = function() {
                 // Setup payload
                 var values = {
-                  binary: window.binary,
+                  binary: binaryString,
                   cid: Zeta.Storage.Session.current_conversation_id,
                   contentType: contentType,
-                  hash: window.hash,
+                  hash: hash,
                   height: this.height,
                   width: this.width
                 };
